<resources>
    <string name="app_name">My Application</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Заголовок</string>
    <string name="description">Описание</string>
    <string name="enter_title">Введите заголовок</string>
    <string name="enter_description">Введите текст</string>
    <string name="btn_add">Добавить</string>
    <string name="btn_cancel">Отменить</string>
    <string name="hello_friend">Добро пожаловать!!!</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="sign_in">Вход</string>
    <string name="registration">Регистрация</string>
    <string name="edit_name">Введите имя</string>
    <string name="edit_password">Введите пароль</string>
    <string name="done">Готово</string>
    <string name="name">Name</string>
    <string name="edit_title">Введите заголовок</string>
    <string name="edit_description">Введите заметку</string>
    <string name="exit">Выход</string>
    <string name="delete_user">Удалить пользователя</string>
    <string name="manual">Инструкция</string>
    <string name="start">Начать</string>
    <string name="navigate_registration">Нет учетной записи? Зарегистрироваться</string>
    <string name="settings">Настройки</string>
    <string name="theme">Тема</string>
    <string name="refactor">Редактирование</string>
    <string name="temp">%s°</string>
    <string name="error">Ошибка\n Попробуем снова?</string>
    <string name="attempt">Попробовать</string>
    <string name="meter">%s м</string>

    <string name="information">Информация об отеле</string>
    <string name="located">Расположен:</string>
    <string name="hotel_list">Список отелей</string>
    <string name="distance">Расстояние:</string>
    <string name="text_suites_availability">Свободные номера:</string>
    <string name="spinner_default">По умолчанию</string>
    <string name="spinner_distance">По расстоянию от центра</string>
    <string name="spinner_availability">"По количеству свободных номеров"</string>
</resources>