<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".welcome.WelcomeFragment">

    <ImageView
        android:id="@+id/image_ruchat"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginHorizontal="@dimen/primary_horizontal_margin"
        android:layout_marginBottom="@dimen/primary_bottom_margin"
        android:contentDescription="@string/app_name"
        android:src="@drawable/note"
        app:layout_constraintBottom_toTopOf="@+id/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:tint="?attr/primary" />

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/primary_horizontal_margin"
        android:gravity="center"
        android:text="@string/hello_friend"
        android:textColor="?attr/primary_text"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_start"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/primary_horizontal_margin"
        android:layout_marginTop="@dimen/secondary_top_margin"
        android:backgroundTint="#419FD9"
        android:text="@string/start"
        android:textColor="?attr/accent_text"
        android:textSize="@dimen/primary_size"
        app:cornerRadius="@dimen/primary_corner_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

</androidx.constraintlayout.widget.ConstraintLayout>