<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".settings.SettingsFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/container_info"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:backgroundTint="?attr/primary_background"
        app:cardElevation="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_back_settings"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginHorizontal="@dimen/secondary_horizontal_margin"
        android:src="@drawable/back"
        app:layout_constraintBottom_toBottomOf="@+id/container_info"
        app:layout_constraintStart_toStartOf="@+id/container_info"
        app:layout_constraintTop_toTopOf="@+id/container_info"
        app:tint="?attr/image" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/secondary_horizontal_margin"
        android:gravity="start"
        android:text="@string/settings"
        android:textColor="?attr/primary_text"
        android:textSize="@dimen/primary_size"
        app:layout_constraintBottom_toBottomOf="@+id/image_back_settings"
        app:layout_constraintStart_toEndOf="@+id/image_back_settings"
        app:layout_constraintTop_toTopOf="@+id/image_back_settings" />

    <TextView
        android:id="@+id/text_theme_settings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/primary_horizontal_margin"
        android:layout_marginTop="@dimen/primary_top_margin"
        android:text="@string/theme"
        android:textColor="?attr/secondary_text"
        android:textSize="@dimen/primary_size"
        app:layout_constraintEnd_toStartOf="@+id/theme_settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container_info" />

    <TextView
        android:id="@+id/theme_settings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/primary_horizontal_margin"
        android:text="Светлая"
        android:textColor="?attr/primary_text"
        android:textSize="@dimen/primary_size"
        app:layout_constraintBottom_toBottomOf="@+id/text_theme_settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_theme_settings" />

    <TextView
        android:id="@+id/delete_user"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/primary_horizontal_margin"
        android:layout_marginTop="@dimen/secondary_top_margin"
        android:text="@string/delete_user"
        android:textColor="?attr/primary"
        android:textSize="@dimen/primary_size"
        app:layout_constraintEnd_toStartOf="@+id/theme_settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_theme_settings" />

    <View
        android:id="@+id/line_container"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="?attr/line"
        app:layout_constraintBottom_toBottomOf="@id/container_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/line"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="?attr/line"
        app:layout_constraintBottom_toTopOf="@+id/delete_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_theme_settings" />

</androidx.constraintlayout.widget.ConstraintLayout>